<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.luc.mlbbrs.ui.vm.MainVm" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tv_dateresult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="pickDate"
            android:text="@{`Starting Date: `+vm.startDateText}"
            android:textColor="@color/white"
            app:backgroundTint="@color/colorPrimary"
            tools:text="Starting Date: 12 October 2020" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content"
            android:max="@{vm.maxStartPower}"
            android:progress="@={vm.startPower}"
            app:color="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{`Starting Power: `+vm.startPower}"
            android:textSize="12dp"
            tools:text="Starting Power: 140" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="@dimen/content"
                android:paddingBottom="@dimen/content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{vm.currentRank}"
                    android:textColor="@color/bg_black"
                    android:textSize="16sp"
                    tools:text="Epic 2, 1 star" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_starting_rank"
                    android:textSize="12dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="@dimen/content"
                android:paddingBottom="@dimen/content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{vm.remainingDay+` days`}"
                    android:textColor="@color/bg_black"
                    android:textSize="16sp"
                    tools:text="97" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_remaining_day"
                    android:textSize="12dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space"
                    android:text="@{vm.expectedRank}"
                    android:textColor="@color/bg_black"
                    android:textSize="16sp"
                    tools:text="Epic 1, 5 star" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_expected_rank"
                    android:textSize="12dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space"
                    android:text="@{``+vm.resetDateText}"
                    android:textColor="@color/bg_black"
                    android:textSize="16sp"
                    tools:text="2020-09-23" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_reset_date"
                    android:textSize="12dp" />
            </LinearLayout>



        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>
</layout>